# gj

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: capitalize_first.rs  config.rs  emoji.rs  lib.rs  main.rs  notion.rs  with_spinner.rs
src/commands/: log.rs  mod.rs  setup.rs
