[package]
name = "gj"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
dialoguer = "0.11.0"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
dirs = "6.0.0"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }